crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_tuple_option_transparent_proxy_inherits_enum_namespace.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId).unwrap()"
---
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
? namespace:
    NAMED: wire
  name: Event
: ENUM:
    - 0:
        SignIn:
          - NEWTYPE:
              OPTION:
                TYPENAME:
                  namespace:
                    NAMED: wire
                  name: UserId
          - []
    - EXTERNAL
    - []
